--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
               <h1 class="pull-left bian_name_right">当今中国，药品<strong>不应该</strong><br>受到专利保护</h1>
             </div>
             <!-- <p class="daibiao_right">(西安交通大学)</p> -->
+            <a href="./fri.html" target="_blank">test</a>
           </div>
         </div>
       </div>
