--- a/index.html
+++ b/index.html
@@ -4,39 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <title>辩论赛计时系统</title>
+  <link rel="shortcut icon" href="./assets/images/pdt.ico">
+
   <link rel="stylesheet" href="assets/scripts/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/scripts/jquery_onepage/css/onepage-scroll.css">
-  <!-- <link rel="stylesheet" href="assets/scripts/jquery_ferroSilder/css/jquery.ferro.ferroSlider.css"> -->
   <link rel="stylesheet" href="assets/styles/index.css">
+  
   <script src="assets/scripts/seajs/sea.js" id="seajsnode"></script>
 
 
 </head>
 
 <body>
-
-  <!-- <h1 id="timedown"></h1>
-	<button id="beginBtn">开始</button>
-	<button id="stopBtn">停止</button>
-	<button id="resetBtn">重置</button>
-
-	<h1 id="timedown2"></h1>
-	<button id="beginBtn2">开始</button>
-	<button id="stopBtn2">停止</button>
-
-<div id="jquery_jplayer_1"></div>
-<div id="jp_container_1">
- <a href="#" id="voiceplay" class="jp-play">Play</a>
- <a href="#" class="jp-pause">Pause</a>
-</div> -->
-
   <div class="hideVoice">
     <div id="jquery_jplayer_1"></div>
     <button id="play1">play1</button>
-    <!--   <div id="jp_container_1">
-   <a href="#" id="voiceplay" class="jp-play">Play</a>
-   <a href="#" class="jp-pause">Pause</a>
-  </div> -->
+
   </div>
 
   <div class="hideVoice">
