--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <!-- <h2 class="daibiao_left">武汉大学</h2> -->
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -59,7 +59,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <!-- <h2 class="daibiao_right">西安交通大学</h2> -->
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
 
@@ -85,7 +85,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -97,7 +97,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -136,7 +136,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -167,7 +167,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -179,7 +179,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -218,7 +218,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -260,7 +260,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -290,7 +290,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -302,7 +302,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -332,7 +332,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -344,7 +344,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -391,7 +391,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -403,7 +403,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -431,7 +431,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -443,7 +443,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -471,7 +471,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -483,7 +483,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -511,7 +511,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -523,7 +523,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -609,7 +609,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -621,7 +621,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
@@ -649,7 +649,7 @@
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
               <h1 class="pull-right bian_name_left">信息碎片化<strong>提升</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_left">武汉大学</p>
+            <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
         </div>
         <div class="col-lg-2 text-center">
@@ -661,7 +661,7 @@
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
               <h1 class="pull-left bian_name_right">信息碎片化<strong>降低</strong>了<br/>当代人的认知水平</h1>
             </div>
-            <p class="daibiao_right">西安交通大学</p>
+            <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
         </div>
       </div>
