--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="main">
     <div class="container-fluid">
       <div class="row text-center margin-top-sm">
-        <h1> 2020年第十届世界华语辩论锦标赛<br>香港赛区</h1>
+        <h1>第十届世界华语辩论锦标赛<br>香港赛区</h1>
       </div>
       <div class="row margin-top-lg">
         <div class="col-lg-5">
