--- a/NanShen.html
+++ b/NanShen.html
@@ -13,25 +13,26 @@
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 
-<body background="./assets/images/bg-pic.jpg" class="bg-img">
+<body background="./assets/images/ov6.png">
   <div class="main">
     
     <h2>
-      辩论赛计时器
+      第十届世界华语辩论锦标赛<br/><br/>
+      香港赛区<br/><br/>
     </h2>
     
     <br/><br/>
 
-    <a href="./NanShen.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-      <h4>世界华语辩论锦标赛</h4>
+    <a href="./preliminary-contest.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+      <h4>初赛</h4>
     </a>
 
-    <a href="./3v3.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-      <h4>网辩</h4>
+    <a href="./semi-final.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+      <h4>半决赛</h4>
     </a>
 
-    <a href="#" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-      <h4>RTHK</h4>
+    <a href="./final.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+      <h4>决赛</h4>
     </a>
 
   </div>
