--- a/NanShen.html
+++ b/NanShen.html
@@ -13,9 +13,9 @@
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 
-<body background="./assets/images/ov6.png">
+<body background="./assets/images/bg-dark.jpg">
   <div class="main">
-    
+    <br/><br/><br/>
     <h2>
       第十届世界华语辩论锦标赛<br/><br/>
       香港赛区<br/><br/>
