--- a/3v3.html
+++ b/3v3.html
@@ -2,7 +2,9 @@
 <html lang="zh-cn">
 <head>
 	<meta charset="UTF-8">
-	<title>辩论赛计时系统</title>
+  <title>辩论赛计时系统</title>
+  <link rel="shortcut icon" href="./assets/images/pdt.ico">
+  
 	<link rel="stylesheet" href="assets/scripts/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/scripts/jquery_onepage/css/onepage-scroll.css">
 	<!-- <link rel="stylesheet" href="assets/scripts/jquery_ferroSilder/css/jquery.ferro.ferroSlider.css"> -->
