--- a/semi-final.html
+++ b/semi-final.html
@@ -49,7 +49,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -61,7 +61,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -87,7 +87,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -99,7 +99,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -126,7 +126,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -138,7 +138,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -169,7 +169,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -181,7 +181,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -208,7 +208,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -220,7 +220,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -250,7 +250,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -262,7 +262,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -292,7 +292,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -304,7 +304,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -334,7 +334,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -346,7 +346,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -393,7 +393,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -405,7 +405,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -433,7 +433,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -445,7 +445,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -473,7 +473,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -485,7 +485,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -513,7 +513,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -525,7 +525,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -555,7 +555,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
           </div>
         </div>
@@ -566,7 +566,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
           </div>
         </div>
@@ -611,7 +611,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -623,7 +623,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -651,7 +651,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -663,7 +663,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
