--- a/RTHK.html
+++ b/RTHK.html
@@ -38,9 +38,8 @@
     <div class="container-fluid">
       <div class="row text-center margin-top-sm">
         <h1>
-          第十届世界华语辩论锦标赛<br/><br/>
-          香港赛区<br/><br/>
-          半决赛
+          香港电台大专杯<br/><br/>
+          普通话辩论赛<br/><br/>
         </h1>
       </div>
 
