--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h4>3V3赛制</h4>
     </a>
 
-    <a href="#" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+    <a href="./RTHK.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
       <h4>RTHK</h4>
     </a>
 
