--- a/semi-final.html
+++ b/semi-final.html
@@ -693,7 +693,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-                <h1 class="pull-right bian_name_left">当今中国，药品<strong>应该</strong><br>受到专利保护</h1>  
+                <h1 class="pull-right bian_name_left">从未得到</strong><br/>更可悲</h1>  
               </div>   
 
             </div>
@@ -705,7 +705,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-                <h1 class="pull-left bian_name_right">当今中国，药品<strong>不应该</strong><br>受到专利保护</h1>   
+                <h1 class="pull-left bian_name_right">得而复失</strong><br/>更可悲</h1>   
               </div>
 
             </div>
@@ -735,7 +735,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-                <h1 class="pull-right bian_name_left">当今中国，药品<strong>应该</strong><br>受到专利保护</h1>  
+                <h1 class="pull-right bian_name_left">从未得到</strong><br/>更可悲</h1>  
               </div>   
 
             </div>
@@ -747,7 +747,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-                <h1 class="pull-left bian_name_right">当今中国，药品<strong>不应该</strong><br>受到专利保护</h1>   
+                <h1 class="pull-left bian_name_right">得而复失</strong><br/>更可悲</h1>   
               </div>
 
             </div>
