--- a/3v3.html
+++ b/3v3.html
@@ -42,7 +42,7 @@
 <div class="main">
   <div class="container-fluid">
     <div class="row text-center margin-top-sm">
-    	<h1> 2018年香港城市大学普通话辩论队<br>表演赛第二场</h1>
+      <h1> 2018年香港城市大学普通话辩论队<br>表演赛第二场</h1>
     </div>
     <div class="row margin-top-lg">
     	<div class="col-lg-5">
@@ -68,8 +68,8 @@
       </div>
       
       <div class="col-lg-12 text-center margin-top-md">
-        <p><button id="btn1" type="button" class="btn btn-primary btn-lg" style="width:180px;">30秒提示声音</button></p>
-        <p><button id="btn2" type="button" class="btn btn-primary btn-lg" style="width:180px;">0秒提示声音</button></p>
+        <p><button id="btn1" type="button" class="btn btn-primary btn-lg btn-bubbles" style="width:180px;">30秒提示声音</button></p>
+        <p><button id="btn2" type="button" class="btn btn-primary btn-lg btn-bubbles" style="width:180px;">0秒提示声音</button></p>
         <!-- <p><button id="btn3" type="button" class="btn btn-primary btn-lg" style="width:180px;">提问时间结束声音</button></p> -->
         <!-- <p><button id="btn4" type="button" class="btn btn-primary btn-lg" style="width:180px;">回答时间结束声音</button></p> -->
       </div>
