--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
     
     <br/><br/>
 
-    <a href="./NanShen.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-      <h4>世界华语辩论锦标赛</h4>
-    </a>
-
-    <a href="./3v3.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-      <h4>3V3赛制</h4>
-    </a>
-
-    <a href="./RTHK.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-      <h4>RTHK</h4>
-    </a>
+    <div id="btn-gp">
+      <a href="./NanShen.html" class="frosted-glass">
+        <h4 class="title">世界华语辩论锦标赛</h4>
+      </a>
+  
+      <a href="./3v3.html" class="frosted-glass">
+        <h4 class="title">3V3赛制</h4>
+      </a>
+  
+      <a href="./RTHK.html" class="frosted-glass">
+        <h4 class="title">RTHK</h4>
+      </a>
+    </div>
 
   </div>
 </body>
