--- a/RTHK.html
+++ b/RTHK.html
@@ -67,8 +67,8 @@
         </div>
 
         <div class="col-lg-12 text-center margin-top-md">
-          <p><button id="btn1" type="button" class="btn btn-primary btn-lg" style="width:180px;">30秒提示声音</button></p>
-          <p><button id="btn2" type="button" class="btn btn-primary btn-lg" style="width:180px;">0秒提示声音</button></p>
+          <p><button id="btn1" type="button" class="btn btn-primary btn-lg btn-bubbles" style="width:180px;">30秒提示声音</button></p>
+          <p><button id="btn2" type="button" class="btn btn-primary btn-lg btn-bubbles" style="width:180px;">0秒提示声音</button></p>
           <!-- <p><button id="btn3" type="button" class="btn btn-primary btn-lg" style="width:180px;">提问时间结束声音</button></p> -->
           <!-- <p><button id="btn4" type="button" class="btn btn-primary btn-lg" style="width:180px;">回答时间结束声音</button></p> -->
         </div>
