--- a/3v3.html
+++ b/3v3.html
@@ -553,6 +553,16 @@
       <h1>评委点评</h1>
     </div>
   </div>
+
+  <div id="dot-gp">
+    <div class="loading">
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+    </div>
+  </div>
   
 </div>
 
