--- a/RTHK.html
+++ b/RTHK.html
@@ -693,6 +693,16 @@
         </div>
       </div>
 
+      <div id="dot-gp">
+        <div class="loading">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </div>
+
     </div>
 
   </div>
