--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="assets/styles/first-page.css">
   
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="assets/scripts/application/util.js"></script>
 </head>
 
 <body background="./assets/images/bg-pic.jpg" class="bg-img">
