--- a/final.html
+++ b/final.html
@@ -778,6 +778,16 @@
         </div>
       </div>
 
+      <div id="dot-gp">
+        <div class="loading">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </div>
+
     </div>
 
   </div>
