--- a/semi-final.html
+++ b/semi-final.html
@@ -693,7 +693,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-                <h1 class="pull-right bian_name_left">从未得到</strong><br/>更可悲</h1>  
+                <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>  
               </div>   
 
             </div>
@@ -705,7 +705,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-                <h1 class="pull-left bian_name_right">得而复失</strong><br/>更可悲</h1>   
+                <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>   
               </div>
 
             </div>
@@ -735,7 +735,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-                <h1 class="pull-right bian_name_left">从未得到</strong><br/>更可悲</h1>  
+                <h1 class="pull-right bian_name_left"><strong>从未得到</strong><br/>更可悲</h1>  
               </div>   
 
             </div>
@@ -747,7 +747,7 @@
             <div>
               <div class="clearfix">
                 <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-                <h1 class="pull-left bian_name_right">得而复失</strong><br/>更可悲</h1>   
+                <h1 class="pull-left bian_name_right"><strong>得而复失</strong><br/>更可悲</h1>   
               </div>
 
             </div>
@@ -773,13 +773,23 @@
       </div>
       <div class="row margin-top-md">
         <div class="col-lg-12 text-center">
+          
           <h1>比赛结束</h1>
           <h1>评委点评</h1>
         </div>
       </div>
 
+      <div id="dot-gp">
+        <div class="loading">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </div>
+      
     </div>
-
   </div>
 
   <script>
