--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <h4 class="title">世界华语辩论锦标赛</h4>
       </a>
   
-      <a href="./3v3.html" class="frosted-glass">
-        <h4 class="title">3V3赛制</h4>
+      <a href="./oregon.html" class="frosted-glass">
+        <h4 class="title">改 ● 奥瑞冈赛制</h4>
       </a>
   
       <a href="./RTHK.html" class="frosted-glass">
